# AirDB-vscode

./: .gitignore  .gitmodules  .vscodeignore  CHANGELOG.md  DEVELOP.md  README.md  README_CN.md  build.js  deploy.sh  i18n.js  package.json  package.nls.ar.json  package.nls.fr.json  package.nls.ja.json  package.nls.json  package.nls.ko.json  package.nls.ru.json  package.nls.zh-cn.json  publish.sh  tailwind.config.js  tsconfig.json  webpack.config.js  webpack.config.lib.js
l10n/: bundle.l10n.ar.json  bundle.l10n.fr.json  bundle.l10n.ja.json  bundle.l10n.json  bundle.l10n.ko.json  bundle.l10n.ru.json  bundle.l10n.zh-cn.json
public/: index.html
src/: extension.ts
standalone/: .gitignore  README.md  package-lock.json  package.json
standalone/app/src-tauri/: Cargo.toml  tauri.conf.json
standalone/app/src-tauri/capabilities/: default.json
standalone/app/src-tauri/src/: main.rs
syntaxes/: snippets.json
test/: damengConnection.test.js  damengDialect.test.js  damengPageService.test.js  damengResultAdapter.test.js  damengServiceIntegration.test.js  damengUiConfig.test.js  dorisConnection.test.js  dorisDialect.test.js  dorisRegistration.test.js  dorisServiceIntegration.test.js  dorisUiConfig.test.js  kafkaConnection.test.js  kafkaConnectionConfig.test.js  kafkaTreeRegistration.test.js  kafkaUiConfig.test.js  kafkaWebviewRegistration.test.js  kingbaseConnection.test.js  kingbaseDialect.test.js  kingbaseDriverLoader.test.js  kingbaseImportExportRegistration.test.js  kingbaseRoutineDialect.test.js  kingbaseServiceIntegration.test.js  kingbaseUiConfig.test.js  (+40 more)
(+423 files in other folders)
